--- a/src/sass/components/_DetailsPopup.scss
+++ b/src/sass/components/_DetailsPopup.scss
@@ -1,37 +1,31 @@
-$img-height: 90vh;
+$img-height: 40%;
 
 .popup {
-  width: calc(100vw - 15px);
+  width: 100vw;
   height: 100vh;
-  background-color: $base-color;
+  background-color: black;
   position: fixed;
   top: 0;
   left: 0;
-  position: fixed;
   z-index: 1000;
-  background-color: transparent;
-
+  // background-color: transparent;
   color: white;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
 
-  &.gradient-background {
-    background: linear-gradient(
-      270deg,
-      #1f005c,
-      #48005f,
-      #680060,
-      #830060,
-      #9c155f,
-      #b22c5e,
-      #c5415d,
-      #d5585c,
-      #e36e5c,
-      #ef865e,
-      #f89d63,
-      #ffb56b
-    );
+  .main-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 400px;
+  }
+
+  @include mobile-only {
+    .popup {
+    }
   }
 
   &-loader-container {
@@ -52,17 +46,145 @@ $img-height: 90vh;
   }
 
   &-container {
-    border: 1px solid green;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    &-gradient {
+      background: rgb(0, 0, 0);
+      background: radial-gradient(
+        circle,
+        rgba(0, 0, 0, 0) 23%,
+        rgba(0, 0, 0, 1) 45%
+      );
+      height: 250px;
+      width: 500px;
+    }
 
     .img {
-      max-width: 80vw;
+      max-width: 40vw;
       width: $img-height;
       height: auto;
     }
   }
 
-  &-description {
-    max-height: $img-height;
-    border: 1px solid red;
+  @include mobile-only {
+    &-container {
+      max-height: 50%;
+    }
   }
+
+  &-overlay-black {
+    background: rgb(0, 0, 0);
+    background: radial-gradient(
+      circle,
+      rgba(0, 0, 0, 0) 20%,
+      rgba(0, 0, 0, 1) 60%
+    );
+  }
+
+  &-description {
+    background-color: black;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    flex-flow: wrap;
+    border: 1px solid gray;
+
+    &-container {
+      width: 100%;
+      text-align: center;
+    }
+
+    &-title {
+      font-size: 40px;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      margin-block-start: 0px;
+      margin-block-end: 0;
+      flex-shrink: 0;
+    }
+
+    &-subtitle {
+      display: inline-block;
+      font-size: 10px;
+      margin: -15px;
+      padding: 10px;
+      text-align: center;
+      background-color: black;
+      width: 100px;
+    }
+
+    &-h3 {
+      font-size: 18px;
+      margin: 0px;
+      text-align: center;
+      width: 100%;
+    }
+
+    &-container-50 {
+      &-img {
+        height: 300px;
+      }
+    }
+
+    &-main-paragraph {
+      font-size: 15px;
+      padding: 0;
+      margin: 0;
+      width: 100%;
+      text-align: center;
+      padding: 10px;
+    }
+
+    &-paragraph {
+      font-size: 15px;
+      padding: 0;
+      margin: 0;
+      max-width: 100%;
+      width: 400px;
+      width: 100%;
+      text-align: left;
+      padding: 10px;
+    }
+  }
+  @include mobile-only {
+    &-description {
+      width: 90vw;
+    }
+  }
+}
+
+.exit-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 10px;
+  background-color: $base-color;
+  border: 0px;
+
+  &:hover {
+    background-color: gray;
+  }
+}
+
+.gradient-background {
+  background: linear-gradient(
+    360deg,
+    #1f005c,
+    #48005f,
+    #680060,
+    #830060,
+    #9c155f,
+    #b22c5e,
+    #c5415d,
+    #d5585c,
+    #e36e5c,
+    #ef865e,
+    #f89d63,
+    #ffb56b
+  );
 }
