--- a/src/sass/components/_DetailsPopup.scss
+++ b/src/sass/components/_DetailsPopup.scss
@@ -14,17 +14,26 @@ $img-height: 40%;
   align-items: center;
   justify-content: center;
   flex-direction: row;
+  overflow: hidden;
 
   .main-container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     flex-direction: column;
-    width: 400px;
+    width: 100%;
+    height: 100%;
+  }
+
+  @include desktop {
+    .main-container {
+      justify-content: space-between;
+    }
   }
 
   @include mobile-only {
     .popup {
+      color: white;
     }
   }
 
@@ -46,25 +55,27 @@ $img-height: 40%;
   }
 
   &-container {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
     text-align: center;
+    max-height: 45vh;
 
     &-gradient {
       background: rgb(0, 0, 0);
       background: radial-gradient(
-        circle,
+        ellipse at 50% 20%,
         rgba(0, 0, 0, 0) 23%,
         rgba(0, 0, 0, 1) 45%
       );
-      height: 250px;
-      width: 500px;
+      height: 100%;
+      width: 400vmax;
+      // margin-top: -159px;
+      // margin-bottom: -113px;
     }
 
     .img {
-      max-width: 40vw;
+      max-width: 25vw;
       width: $img-height;
       height: auto;
     }
@@ -73,6 +84,10 @@ $img-height: 40%;
   @include mobile-only {
     &-container {
       max-height: 50%;
+
+      .img {
+        max-width: 35vw;
+      }
     }
   }
 
@@ -92,6 +107,9 @@ $img-height: 40%;
     flex-direction: row;
     flex-flow: wrap;
     border: 1px solid gray;
+    max-width: 63vw;
+    align-items: center;
+    justify-content: center;
 
     &-container {
       width: 100%;
