--- a/src/sass/components/_DetailsPopup.scss
+++ b/src/sass/components/_DetailsPopup.scss
@@ -19,7 +19,7 @@ $img-height: 40%;
   .main-container {
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     flex-direction: column;
     width: 100%;
     height: 100%;
@@ -59,7 +59,7 @@ $img-height: 40%;
     // align-items: center;
     // justify-content: center;
     text-align: center;
-    max-height: 45vh;
+    max-height: 49vh;
 
     &-gradient {
       background: rgb(0, 0, 0);
@@ -68,7 +68,7 @@ $img-height: 40%;
         rgba(0, 0, 0, 0) 23%,
         rgba(0, 0, 0, 1) 45%
       );
-      height: 100%;
+      height: 70vh;
       width: 400vmax;
       // margin-top: -159px;
       // margin-bottom: -113px;
@@ -87,6 +87,9 @@ $img-height: 40%;
 
       .img {
         max-width: 35vw;
+      }
+      &.smalContainer {
+        max-height: 50vmin;
       }
     }
   }
@@ -171,7 +174,7 @@ $img-height: 40%;
   }
   @include mobile-only {
     &-description {
-      width: 90vw;
+      max-width: 90vw;
     }
   }
 }
