--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -7,6 +7,7 @@
   margin: auto;
   position: relative;
 
+
   &.row {
     flex-direction: row;
     justify-content: space-between;
@@ -14,3 +15,9 @@
     border-bottom: 2px solid $ligther-base-color;
   }
 }
+
+	@include desktop-only{
+		.container{
+			margin-right: 16px;
+		}
+	}
